# ci-cd-gitlab-mirror

./: .gitignore  .gitlab-ci.yml  .readthedocs.yaml  LICENSE.txt  README.md  conf.py  index.rst  pyproject.toml  requirements.txt
_build/doctrees/: environment.pickle  index.doctree
_build/doctrees/docs/source/: conf.doctree  modules.doctree  tests.doctree
_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
_build/html/_sources/docs/source/: modules.rst.txt
_build/html/docs/source/: conf.html  modules.html  tests.html
docs/source/: tests.rst
src/my_arithmetic_tvalenti/: __about__.py  __init__.py  pgcd.py
tests/: test_pgcd.py
