[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "my-arithmetic-tvalenti"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Teddy Valentin", email = "teddy.vltn@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/Teddy Valentin/my-arithmetic-tvalenti#readme"
Issues = "https://github.com/Teddy Valentin/my-arithmetic-tvalenti/issues"
Source = "https://github.com/Teddy Valentin/my-arithmetic-tvalenti"

[tool.hatch.version]
path = "src/my_arithmetic_tvalenti/__about__.py"
source = "vcs"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/my_arithmetic_tvalenti tests}"

[tool.coverage.run]
source_pkgs = ["my_arithmetic_tvalenti", "tests"]
branch = true
parallel = true
omit = [
  "src/my_arithmetic_tvalenti/__about__.py",
]

[tool.coverage.paths]
my_arithmetic_tvalenti = ["src/my_arithmetic_tvalenti", "*/my-arithmetic-tvalenti/src/my_arithmetic_tvalenti"]
tests = ["tests", "*/my-arithmetic-tvalenti/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]


